<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mealmate.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.mealmate.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" />

    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="com.example.mealmate.ui.shopping.ShoppingListFragment"
        android:label="@string/menu_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mealmate.ui.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.mealmate.ui.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_grocery_list"
        android:name="com.example.mealmate.ui.grocery.GroceryListFragment"
        android:label="Grocery List"
        tools:layout="@layout/fragment_grocery_list">
        <action
            android:id="@+id/action_groceryList_to_groceryActions"
            app:destination="@id/groceryActionsFragment">
            <argument
                android:name="itemId"
                app:argType="long" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/groceryActionsFragment"
        android:name="com.example.mealmate.ui.grocery.GroceryActionsFragment"
        android:label="Item Actions"
        tools:layout="@layout/fragment_grocery_actions">
        <argument
            android:name="itemId"
            app:argType="long" />
    </fragment>
</navigation>